tests/baselines/reference/parserClassDeclaration22.errors.txt
parserClassDeclaration22.ts(3,5): error TS2389: Function implementation name must be '"foo"'.


==== parserClassDeclaration22.ts (1 errors) ====
    class C {
        "foo"();
        "bar"() { }
        ~~~~~
!!! error TS2389: Function implementation name must be '"foo"'.
    }